<resources>
    <string name="app_name">BaMetro</string>
    <string name="app_name_fa">بامِترو</string>
    <string name="tehran_metro">مترو تهران</string>
    <string name="brt">BRT</string>
    <string name="about_us">درباره ما</string>
    <string name="close">بستن</string>
    <string name="about_app">با‌مِترو برنامه‌ای برای مشاهده نقشه مترو ، BRT ، کوهستان ، بهشت زهرا ، متروی مراکز استانها بدون نیاز به اینترنت</string>
    <string name="about_app_1">نقشه ترکیبی مترو و اتوبوس های تندروی تهران ، متروی دوبی واستانبول برای بارگیری اولیه به اتصال اینتزنتی احتیاج دارند.</string>
    <string name="about_app_2">نقشه های نمایش داده شده از وبسایت های رسمی شهرداری یا سازمان های مربوطه تهیه شده است. این برنامه درستی یا غلط بودن اطلاعات نمایش داده شده را تایید یا رد نمی‌کند. برخی اطلاعات نمایش داده شده نیز ممکن است به روز نباشند.</string>
    <string name="about_app_3">برای نمایش نقشه آنلاین از سکوی neshan.org استفاده شده است.</string>
    <string name="version">%1$s %2$s</string>
    <string name="thisAppVersion">با‌مِترو نسخه :</string>
    <string name="contact_us_email"><b> ارتباط با توسعه دهنده: app.roela@gmail.com</b></string>
    <string name="develop_by_roela_apps">طراحی و توسعه Roela Apps</string>
    <string name="metro_map_source">metro.tehran.ir : منبع نقشه مترو</string>
    <string name="metro_times">ساعات حرکت مترو</string>
    <string name="behesht_zahra">بهشت زهرا</string>
    <string name="loading">در حال بارگزاری…</string>
    <string name="loaded">بارگزاری شد</string>
    <string name="kooh_tehran">کوهستان تهران</string>
    <string name="tehran_map">نقشه آفلاین تهران</string>
    <string name="online_map">نقشه آنلاین</string>
    <string name="isfahan_metro">مترو اصفهان</string>
    <string name="tabriz_metro">مترو تبریز</string>
    <string name="location_permission_granted">مجوز دسترسی به موقعیت داده شد</string>
    <string name="location_permission_not_granted">مجوز دسترسی به موقعیت داده نشد</string>
    <string name="this_section_not_supported_on_your_device">این قسمت در دستگاه شما پشتیبانی نمی‌شود</string>
    <string name="tehran_bok_fair">نمایشگاه کتاب تهران</string>
    <string name="metro_brt_combined">ترکیبی مترو و BRT🌍</string>
    <string name="istanbul_metro">مترو استانبول 🌍</string>
    <string name="dubai_metro">مترو دوبی 🌍</string>
<!--    <string name="najaf_karbala">نجف و کربلا 🌍</string>-->
<!--    <string name="rate_and_comment_please">با امتیاز و نظر دادن این برنامه را حمایت کنید</string>-->
    <string name="rate_and_comment_please">امتیاز دادن به برنامه</string>
    <string name="our_apps_in_bazaar">برنامه های دیگر ما</string>
    <string name="scan_barcode_for_download_this_app">برای دانلود و اشتراک گذاری این برنامه بارکد زیر را اسکن نمایید</string>
    <string name="qrcode">qrcode</string>
    <string name="iran_necessary_phones">تلفن های ضروری</string>
    <string name="internet_is_require">برای مشاهده این قسمت به اتصال اینترنتی نیاز است</string>
    <string name="help">راهنما</string>
    <string name="weather_api_copyright"> منبع اطالاعات هواشناسی : openweathermap.org</string>
    <string name="enter">به هر حال باز شود</string>
    <string name="open_wireless_settings">رفتن به تنظیمات اینترنت</string>
    <string name="this_map_not_require_internet">نمایش این نقشه به اینترنت نیاز ندارد.</string>
    <string name="this_map_require_internet_for_first_time">نمایش این نقشه برای اولین بار به اینترنت نیاز دارد. در استفاده های بعدی نیازی به اتصال اینترنتی نیست.</string>
</resources>